Author in RSS feed
This fixes  #457

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -4,6 +4,8 @@
 <p>Version bump 5.0 to make it higher than version 4.9 now in Debian and derivatives.</p>
 <p>Partial support for \ca ...\ca* in USFM 3.</p>
 <p>Workspaces in Edge fill the available space.</p>
+<p>Setting on whether to include the authors in the RSS feed.</p>
+<p>The RSS feed includes the author in the description field also.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
