Fast styles cache
https://github.com/bibledit/bibledit/issues/494

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -6,6 +6,7 @@
 <p>Workspaces in Edge fill the available space.</p>
 <p>Setting on whether to include the authors in the RSS feed.</p>
 <p>The RSS feed includes the author in the description field also.</p>
+<p>Fast styles cache.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
