Splitting large source file up into smaller ones
https://github.com/bibledit/bibledit/issues/500

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -1,7 +1,7 @@
 <h1>ChangeLog</h1>
 
-<h2>Version 5.0.xxx</h2>
-<p>Version bump 5.0 to make it higher than version 4.9 now in Debian and derivatives.</p>
+<h2>Version 5.1.xxx</h2>
+<p>Version bump to 5.1 to make it higher than version 4.9 now in Debian and derivatives.</p>
 <p>Partial support for \ca ...\ca* in USFM 3.</p>
 <p>Workspaces in Edge fill the available space.</p>
 <p>Setting on whether to include the authors in the RSS feed.</p>
