Handle print in Linux
https://github.com/bibledit/bibledit/issues/471

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -7,7 +7,7 @@
 <p>Setting on whether to include the authors in the RSS feed.</p>
 <p>The RSS feed includes the author in the description field also.</p>
 <p>Fast styles cache.</p>
-<p>Handle file download in Linux.</p>
+<p>Handle file download and print in Linux.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
