Updated Bible editor preferences
There are two places in advanced mode where one can see the visual
editors selected via preferences.
1. In the workspaces
2. under the translation menu

My suggestion was that the preference setting for all editors would
only apply to the options visible within workspaces. So that if the
user chose to only show the visual verse editor in Preferences, he
could still see the visual chapter editor in full screen mode under the
Translation menu.

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -8,6 +8,8 @@
 <p>The RSS feed includes the author in the description field also.</p>
 <p>Fast styles cache.</p>
 <p>Handle file download and print in Linux.</p>
+<p>The menu in advanced mode always shows all four Bible editors.</p>
+<p>The preferences for the Bible editors apply to the fast editor switcher only.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
