--- a/personalize/index.html
+++ b/personalize/index.html
@@ -122,9 +122,12 @@ translate("Enable fast Bible editor switching"):
 </p>
 
 <br>
-<p>translate("Active Bible editors:")</p>
-<p>translate("Visual editors:") <a href="?activevisualeditors=">##activevisualeditors##</a>.</p>
-<p>translate("USFM editors:") <a href="?activeusfmeditors=">##activeusfmeditors##</a>.</p>
+<p>
+translate("Available Bible editors in fast Bible editor switcher:")
+[<a href="../editor/select">...</a>]
+</p>
+<p>translate("Visual editors:") <a href="?fastswitchvisualeditors=">##fastswitchvisualeditors##</a>.</p>
+<p>translate("USFM editors:") <a href="?fastswitchusfmeditors=">##fastswitchusfmeditors##</a>.</p>
 
 <br>
 <p>
