Setting to downgrade the visual Bible editors
https://github.com/bibledit/bibledit/issues/476

--- a/personalize/index.html
+++ b/personalize/index.html
@@ -131,6 +131,13 @@ translate("Available Bible editors in fast Bible editor switcher:")
 
 <br>
 <p>
+translate("Downgrade the visual Bible editors:")
+<a href="?editordowngrade=">##editordowngrade##</a>.
+translate("Downgrade them on older computing devices if they do not run the current visual Bible editors.")
+</p>
+
+<br>
+<p>
 translate("Enable the Styles button in the visual Bible editors"):
 <a href="?enablestylesbutton=">##enablestylesbutton##</a>.
 </p>
