Logs the browser's user agent

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -10,6 +10,7 @@
 <p>Handle file download and print in Linux.</p>
 <p>The menu in advanced mode always shows all four Bible editors.</p>
 <p>The preferences for the Bible editors apply to the fast editor switcher only.</p>
+<p>Logs the browser's user agent.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
