Fixed: Logout link in client app
This fixes https://github.com/bibledit/bibledit/issues/478

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -11,6 +11,7 @@
 <p>The menu in advanced mode always shows all four Bible editors.</p>
 <p>The preferences for the Bible editors apply to the fast editor switcher only.</p>
 <p>Logs the browser's user agent.</p>
+<p>Fixed: Logout link in client app.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
