Fixed: Inaccurate focused verse when typing at the end of a verse in the USFM chapter editor
This fixes https://github.com/bibledit/bibledit/issues/479

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -12,6 +12,7 @@
 <p>The preferences for the Bible editors apply to the fast editor switcher only.</p>
 <p>Logs the browser's user agent.</p>
 <p>Fixed: Logout link in client app.</p>
+<p>Fixed: Inaccurate focused verse when typing at the end of a verse in the USFM chapter editor.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
