User privilege whether to use advanced mode in the Cloud
This fixes https://github.com/bibledit/bibledit/issues/487

--- a/basic/index.html
+++ b/basic/index.html
@@ -20,12 +20,14 @@ translate ("This is for collaboration with fellow translators and for backup.")
 </p>
 <!-- #ENDZONE client -->
 
+<!-- #BEGINZONE advancedmode -->
 <br>
 <p>
 <a href="/index/index?mode=advanced">translate ("Switch to advanced mode.")</a>
 translate ("Advanced mode offers more options than basic mode.")
 translate ("Once in advanced mode, return to basic mode via menu Settings / Basic mode.")
 </p>
+<!-- #ENDZONE advancedmode -->
 
 <br>
 <p>
