--- a/help/changelog.html
+++ b/help/changelog.html
@@ -13,6 +13,7 @@
 <p>Logs the browser's user agent.</p>
 <p>Fixed: Logout link in client app.</p>
 <p>Fixed: Inaccurate focused verse when typing at the end of a verse in the USFM chapter editor.</p>
+<p>User privilege whether to use advanced mode in the Cloud.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
