More preferences in basic mode #511
https://github.com/bibledit/bibledit/issues/511

--- a/personalize/index.html
+++ b/personalize/index.html
@@ -1,7 +1,9 @@
 <p class="success">##success##</p>
 <p class="error">##error##</p>
 
+<!-- #BEGINZONE advancedmode -->
 <h3>translate("Preferences")</h3>
+<!-- #ENDZONE advancedmode -->
 
 <p>
 translate("General font size for the interface"):
@@ -15,6 +17,8 @@ translate("Relative font size for the menu"):
 <a href="?fontsizemenu=">##fontsizemenu##%</a>.
 translate("The size of the font for the menu, relative to the general font size.")
 </p>
+
+<!-- #BEGINZONE advancedmode -->
 
 <!-- #BEGINZONE bibles -->
 
@@ -141,5 +145,56 @@ translate("Downgrade them on older computing devices if they do not run the curr
 translate("Enable the Styles button in the visual Bible editors"):
 <a href="?enablestylesbutton=">##enablestylesbutton##</a>.
 </p>
+
+<!-- #ENDZONE advancedmode -->
+
+<!-- #BEGINZONE basicmode -->
+
+<br>
+<p>
+translate ("Select the Bible for editing:")
+<a id="bibleselect" href="?changebible=">##bible##</a>.
+</p>
+
+<!-- #BEGINZONE client_connected -->
+<br>
+<p>
+<a href="/sendreceive/index">translate ("Send and receive.")</a>
+translate ("This is for sending your changes to Bibledit Cloud, and receiving changes made by others.")
+</p>
+<!-- #ENDZONE client_connected -->
+
+<!-- #BEGINZONE client_mode -->
+<br>
+<p>
+<a href="/client/index">translate ("Connection to Bibledit Cloud.")</a>
+translate ("This is for collaboration with fellow translators and for backup.")
+</p>
+<!-- #ENDZONE client_mode -->
+
+<!-- #BEGINZONE can_use_advanced_mode -->
+<br>
+<p>
+<a href="/index/index?mode=advanced">translate ("Switch to advanced mode.")</a>
+translate ("Advanced mode offers more options than basic mode.")
+translate ("Once in advanced mode, return to basic mode via menu Settings / Basic mode.")
+</p>
+<!-- #ENDZONE can_use_advanced_mode -->
+
+<br>
+<p>
+translate ("Show the changes"):
+<a href="?showchanges">##showchanges##</a>.
+translate ("Whether to have a menu entry to go to the changes.")
+</p>
+
+<!-- #BEGINZONE cloud_mode -->
+<br>
+<p>
+<a href="/session/logout">translate ("Logout.")</a>
+</p>
+<!-- #ENDZONE cloud_mode -->
+
+<!-- #ENDZONE basicmode -->
 
 <script type="text/javascript" src="index.js?##VERSION##"></script>
