--- a/resource/cache.html
+++ b/resource/cache.html
@@ -12,5 +12,10 @@ translate ("When installing the resource again, it will continue from where it w
 <p>
 translate ("Click a resource for more information on its status.")
 </p>
+<!-- #BEGINZONE clientdisconnected -->
+<p>
+translate ("Connect to Bibledit Cloud to have access to the full range of available resources.")
+</p>
+<!-- #ENDZONE clientdisconnected -->
 <br>
 ##block##
