Warning if client is disconnected
In the disconnected state of a client, there’s fewer or none resources
in some categories. Information about this is given where relevant.
This fixes https://github.com/bibledit/bibledit/issues/489.

--- a/resource/cache.html
+++ b/resource/cache.html
@@ -13,9 +13,7 @@ translate ("When installing the resource again, it will continue from where it w
 translate ("Click a resource for more information on its status.")
 </p>
 <!-- #BEGINZONE clientdisconnected -->
-<p>
-translate ("Connect to Bibledit Cloud to have access to the full range of available resources.")
-</p>
+<p>translate ("Connect to Bibledit Cloud to have access to the full range of available resources.")</p>
 <!-- #ENDZONE clientdisconnected -->
 <br>
 ##block##
