Localize output of mechanical checks
This fixes https://github.com/bibledit/bibledit/issues/493: "I saw
still that the result of the verification is not in french just in
English, is it possible to translate it?"

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -15,6 +15,7 @@
 <p>Fixed: Inaccurate focused verse when typing at the end of a verse in the USFM chapter editor.</p>
 <p>User privilege whether to use advanced mode in the Cloud.</p>
 <p>Ctrl-F searches the interface.</p>
+<p>Localized output of the mechanical checks.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
