--- a/help/changelog.html
+++ b/help/changelog.html
@@ -16,6 +16,7 @@
 <p>User privilege whether to use advanced mode in the Cloud.</p>
 <p>Ctrl-F searches the interface.</p>
 <p>Localized output of the mechanical checks.</p>
+<p>Improved parsing of emailed responses to consultation notes.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
