Improved search and replace in texts with notes
This fixes https://github.com/bibledit/bibledit/issues/498.

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -17,6 +17,7 @@
 <p>Ctrl-F searches the interface.</p>
 <p>Localized output of the mechanical checks.</p>
 <p>Improved parsing of emailed responses to consultation notes.</p>
+<p>Improved search and replace in texts with notes.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
