--- a/help/changelog.html
+++ b/help/changelog.html
@@ -18,6 +18,8 @@
 <p>Localized output of the mechanical checks.</p>
 <p>Improved parsing of emailed responses to consultation notes.</p>
 <p>Improved search and replace in texts with notes.</p>
+<p>File upload and download in the Windows app.</p>
+<p>File download in the macOS app.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
