--- a/help/changelog.html
+++ b/help/changelog.html
@@ -19,7 +19,7 @@
 <p>Improved parsing of emailed responses to consultation notes.</p>
 <p>Improved search and replace in texts with notes.</p>
 <p>File upload and download in the Windows app.</p>
-<p>File download in the macOS app.</p>
+<p>File upload and download in the macOS app.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
