--- a/bible/import.html
+++ b/bible/import.html
@@ -40,7 +40,7 @@ translate("It recognizes two types of text.")
 <p>
 1.
 translate("It recognizes Unified Standard Format Markers text.")
-<a href="https://ubsicap.github.io/usfm">translate("More information about that.")</a>
+<a href="https://ubsicap.github.io/usfm">translate("More information about that.")</a><!-- Todo -->
 translate("Bibledit recognizes books through the \id markup and chapters through the \c markup.")
 </p>
 <br>
