--- a/client/index.html
+++ b/client/index.html
@@ -48,7 +48,7 @@
 
 <p>
   translate ("To get access to Bibledit Cloud, install a server instance.")
-  <a href="http://bibledit.org">translate ("Or request a server instance from bibledit.org through the contact form.")</a>
+  <a href="http://bibledit.org">translate ("Or request a server instance from bibledit.org through the contact form.")</a><!-- Todo -->
 </p>
 
 <!-- #ENDZONE clientoff -->
