--- a/help/about.html
+++ b/help/about.html
@@ -1,7 +1,7 @@
 <h2>translate("About")</h2>
 <p>Bibledit ##version##</p>
 <br>
-<p><a href="http://bibledit.org">http://bibledit.org</a></p>
+<p><a href="http://bibledit.org">http://bibledit.org</a></p><!-- Todo -->
 <br>
 <p><a href="freebible">translate ("The Free Bible")</a></p>
 <br>
