--- a/help/installation.html
+++ b/help/installation.html
@@ -90,7 +90,7 @@ translate("The changes made in this way can be synchronized with Bibledit Cloud 
 
 <h2>translate("Development version")</h2>
 <p>
-  <a href="https://github.com/teusbenschop/bibledit">translate("The Bibledit source code is kept in a git repository.")</a>
+  <a href="https://github.com/teusbenschop/bibledit">translate("The Bibledit source code is kept in a git repository.")</a><!-- Todo -->
   translate("Experienced software developers will be able to create all Bibledit editions from the source code.")
 </p>
 
@@ -102,15 +102,15 @@ translate("The changes made in this way can be synchronized with Bibledit Cloud 
 <ol>
   <li>
     <a href="http://ramnode.com/vps.php">RamNode</a>, Premium OpenVZ SSD 128MB for $15 per year (2016).
-    translate("Due to the limited memory, Bibledit Cloud cannot compiled there, but compatible binaries compiled elsewhere will run fine.")
+    translate("Due to the limited memory, Bibledit Cloud cannot compiled there, but compatible binaries compiled elsewhere will run fine.")<!-- Todo -->
   </li>
   <li>
-    <a href="https://www.digitalocean.com/?refcode=5189a8e56d7a">Digital Ocean</a>, 512 Mb / 1 CPU / 20 Gb SSD Disk for $5 per month = $60 per year (2016).
+    <a href="https://www.digitalocean.com/?refcode=5189a8e56d7a">Digital Ocean</a>, 512 Mb / 1 CPU / 20 Gb SSD Disk for $5 per month = $60 per year (2016).<!-- Todo -->
   </li>
 </ol>
 <p>
   translate("You may also run your Bibledit Cloud instance from bibledit.org.")
-  <a href="http://bibledit.org/contact.php">translate("Use the contact form to explain why you need a Bibledit Cloud instance.")</a>
+  <a href="http://bibledit.org/contact.php">translate("Use the contact form to explain why you need a Bibledit Cloud instance.")</a><!-- Todo -->
 </p>
 
 <h2>translate("Administrator info")</h2>
