--- a/help/installchromeos.html
+++ b/help/installchromeos.html
@@ -3,7 +3,7 @@
 <ol>
 
 <li>
-  <a href="https://chrome.google.com/webstore/detail/bibledit/aiaanakhppdclmabkcnpmnidajanaoda">translate("Install Bibledit from the Google Chrome Web Store.")</a>
+  <a href="https://chrome.google.com/webstore/detail/bibledit/aiaanakhppdclmabkcnpmnidajanaoda">translate("Install Bibledit from the Google Chrome Web Store.")</a><!-- Todo -->
 </li>
 
 <li>
@@ -20,6 +20,6 @@
 
 <li>
   translate("For easier operation, open the Chrome browser and open this URL:")
-  <a href="http://localhost:8080">http://localhost:8080</a>
+  <a href="http://localhost:8080">http://localhost:8080</a><!-- Todo out or update -->
 </li>
 
