--- a/help/installosx.html
+++ b/help/installosx.html
@@ -5,7 +5,7 @@
 
 <ol>
 
-<li><a href="https://itunes.apple.com/us/app/bibledit/id996639148">translate("Download Bibledit from the App Store.")</a></li>
+<li><a href="https://itunes.apple.com/us/app/bibledit/id996639148">translate("Download Bibledit from the App Store.")</a></li><!-- Todo -->
 
 <li>translate("Install Bibledit.")</li>
 
