--- a/help/installwindows.html
+++ b/help/installwindows.html
@@ -13,7 +13,7 @@
 
 <li>
 <p>
-  <a href="http://bibledit.org/windows">translate("Download") Bibledit</a>.
+  <a href="http://bibledit.org/windows">translate("Download") Bibledit</a>.<!-- Todo -->
 </p>
 </li>
 
