--- a/help/installandroid.html
+++ b/help/installandroid.html
@@ -3,7 +3,7 @@
 <ol>
 
 <li>
-  <a href="https://play.google.com/store/apps/details?id=org.bibledit.android">translate("Install Bibledit from Google Play.")</a>
+  <a href="https://play.google.com/store/apps/details?id=org.bibledit.android">translate("Install Bibledit from Google Play.")</a><!-- Todo -->
 </li>
 
 <li>
