--- a/resource/user1view.html
+++ b/resource/user1view.html
@@ -1,4 +1,4 @@
-<iframe sandbox="" src="http://localhost:8080/search/index" style="flex-grow: 1"></iframe>
+<iframe sandbox="" src="http://localhost:8080/search/index" style="flex-grow: 1"></iframe><!-- Todo fix port also. -->
 <script>##script##</script>
 <script type="text/javascript" src="user1view.js?##VERSION##"></script>
 <script type="text/javascript" src="/navigation/nav.js?##VERSION##"></script>
