Markup for external links
https://github.com/bibledit/bibledit/issues/506

--- a/bible/import.html
+++ b/bible/import.html
@@ -40,7 +40,7 @@ translate("It recognizes two types of text.")
 <p>
 1.
 translate("It recognizes Unified Standard Format Markers text.")
-<a href="https://ubsicap.github.io/usfm">translate("More information about that.")</a><!-- Todo -->
+<a href="https://ubsicap.github.io/usfm" ##external##>translate("More information about that.")</a>
 translate("Bibledit recognizes books through the \id markup and chapters through the \c markup.")
 </p>
 <br>
@@ -62,3 +62,4 @@ translate("If Genesis 1 was not yet there, it will be created.")
 translate("You can import one chapter, or several chapters, or one book, or several books, all in one go.")
 translate("The text to be imported should be in Unicode UTF-8 format.")
 </p>
+<script type="text/javascript" src="../assets/external.js"></script>
