--- a/client/index.html
+++ b/client/index.html
@@ -48,7 +48,7 @@
 
 <p>
   translate ("To get access to Bibledit Cloud, install a server instance.")
-  <a href="http://bibledit.org">translate ("Or request a server instance from bibledit.org through the contact form.")</a><!-- Todo -->
+  <a href="http://bibledit.org" ##external##>translate ("Or request a server instance from bibledit.org through the contact form.")</a>
 </p>
 
 <!-- #ENDZONE clientoff -->
@@ -57,3 +57,4 @@
 <p class="error">##error##</p>
 <p class="success">##success##</p>
 <p class="error">##demo##</p>
+<script type="text/javascript" src="../assets/external.js"></script>
