--- a/help/installandroid.html
+++ b/help/installandroid.html
@@ -3,7 +3,7 @@
 <ol>
 
 <li>
-  <a href="https://play.google.com/store/apps/details?id=org.bibledit.android">translate("Install Bibledit from Google Play.")</a><!-- Todo -->
+  <a href="https://play.google.com/store/apps/details?id=org.bibledit.android" ##external##>translate("Install Bibledit from Google Play.")</a><!-- Todo -->
 </li>
 
 <li>
@@ -17,3 +17,5 @@
 <li>
   translate("Connect to Bibledit Cloud via menu Settings / Cloud.")
 </li>
+
+<script type="text/javascript" src="../assets/external.js"></script>
