--- a/help/installation.html
+++ b/help/installation.html
@@ -90,7 +90,7 @@ translate("The changes made in this way can be synchronized with Bibledit Cloud 
 
 <h2>translate("Development version")</h2>
 <p>
-  <a href="https://github.com/teusbenschop/bibledit">translate("The Bibledit source code is kept in a git repository.")</a><!-- Todo -->
+  <a href="https://github.com/teusbenschop/bibledit" ##external##>translate("The Bibledit source code is kept in a git repository.")</a>
   translate("Experienced software developers will be able to create all Bibledit editions from the source code.")
 </p>
 
@@ -101,16 +101,16 @@ translate("The changes made in this way can be synchronized with Bibledit Cloud 
 </p>
 <ol>
   <li>
-    <a href="http://ramnode.com/vps.php">RamNode</a>, Premium OpenVZ SSD 128MB for $15 per year (2016).
-    translate("Due to the limited memory, Bibledit Cloud cannot compiled there, but compatible binaries compiled elsewhere will run fine.")<!-- Todo -->
+    <a href="http://ramnode.com/vps.php" ##external##>RamNode</a>, Premium OpenVZ SSD 128MB for $15 per year (2016).
+    translate("Due to the limited memory, Bibledit Cloud cannot compiled there, but compatible binaries compiled elsewhere will run fine.")
   </li>
   <li>
-    <a href="https://www.digitalocean.com/?refcode=5189a8e56d7a">Digital Ocean</a>, 512 Mb / 1 CPU / 20 Gb SSD Disk for $5 per month = $60 per year (2016).<!-- Todo -->
+    <a href="https://www.digitalocean.com/?refcode=5189a8e56d7a" ##external##>Digital Ocean</a>, 512 Mb / 1 CPU / 20 Gb SSD Disk for $5 per month = $60 per year (2016).
   </li>
 </ol>
 <p>
   translate("You may also run your Bibledit Cloud instance from bibledit.org.")
-  <a href="http://bibledit.org/contact.php">translate("Use the contact form to explain why you need a Bibledit Cloud instance.")</a><!-- Todo -->
+  <a href="http://bibledit.org/contact.php" ##external##>translate("Use the contact form to explain why you need a Bibledit Cloud instance.")</a>
 </p>
 
 <h2>translate("Administrator info")</h2>
@@ -124,3 +124,4 @@ translate("It is possible to enable an external OpenLDAP server for user authent
 translate("The following file in the Bibledit installation provides all information needed:")
 config/config.txt
 </p>
+<script type="text/javascript" src="../assets/external.js"></script>
