--- a/help/about.html
+++ b/help/about.html
@@ -1,10 +1,11 @@
 <h2>translate("About")</h2>
 <p>Bibledit ##version##</p>
 <br>
-<p><a href="http://bibledit.org">http://bibledit.org</a></p><!-- Todo -->
+<p><a href="http://bibledit.org" ##external##>http://bibledit.org</a></p>
 <br>
 <p><a href="freebible">translate ("The Free Bible")</a></p>
 <br>
 <p><a href="changelog">ChangeLog</a></p>
 <br>
 <p><a href="licenses">translate ("Licenses")</a></p>
+<script type="text/javascript" src="../assets/external.js"></script>
