Update or remove external links
https://github.com/bibledit/bibledit/issues/506
Bibledit for Chrome OS now automatically opens the Chrome browser.

--- a/help/installandroid.html
+++ b/help/installandroid.html
@@ -3,7 +3,7 @@
 <ol>
 
 <li>
-  <a href="https://play.google.com/store/apps/details?id=org.bibledit.android" ##external##>translate("Install Bibledit from Google Play.")</a><!-- Todo -->
+  <a href="https://play.google.com/store/apps/details?id=org.bibledit.android" ##external##>translate("Install Bibledit from Google Play.")</a>
 </li>
 
 <li>
