--- a/help/installchromeos.html
+++ b/help/installchromeos.html
@@ -3,7 +3,7 @@
 <ol>
 
 <li>
-  <a href="https://chrome.google.com/webstore/detail/bibledit/aiaanakhppdclmabkcnpmnidajanaoda">translate("Install Bibledit from the Google Chrome Web Store.")</a><!-- Todo -->
+  <a href="https://chrome.google.com/webstore/detail/bibledit/aiaanakhppdclmabkcnpmnidajanaoda" ##external##>translate("Install Bibledit from the Google Chrome Web Store.")</a>
 </li>
 
 <li>
@@ -18,8 +18,4 @@
   translate("Connect to Bibledit Cloud via menu Settings / Cloud.")
 </li>
 
-<li>
-  translate("For easier operation, open the Chrome browser and open this URL:")
-  <a href="http://localhost:8080">http://localhost:8080</a><!-- Todo out or update -->
-</li>
-
+<script type="text/javascript" src="../assets/external.js"></script>
