Updated external links
https://github.com/bibledit/bibledit/issues/506

--- a/help/installosx.html
+++ b/help/installosx.html
@@ -5,7 +5,7 @@
 
 <ol>
 
-<li><a href="https://itunes.apple.com/us/app/bibledit/id996639148">translate("Download Bibledit from the App Store.")</a></li><!-- Todo -->
+<li><a href="https://itunes.apple.com/us/app/bibledit/id996639148" ##external##>translate("Download Bibledit from the App Store.")</a></li>
 
 <li>translate("Install Bibledit.")</li>
 
@@ -21,3 +21,4 @@
 
 </ol>
 
+<script type="text/javascript" src="../assets/external.js"></script>
