--- a/help/leanmanagement.html
+++ b/help/leanmanagement.html
@@ -10,4 +10,5 @@
 <p>1. translate("Developing desired conditions.")</p>
 <p>2. translate("Developing capable people who can develop the desired conditions.")</p>
 <br>
-<p><a href="http://www.lean.org">translate("External reference")</a></p><!-- Todo -->
+<p><a href="http://www.lean.org" ##external##>translate("External reference")</a></p>
+<script type="text/javascript" src="../assets/external.js"></script>
