--- a/help/installios.html
+++ b/help/installios.html
@@ -1,7 +1,7 @@
 <h1>translate("Install Bibledit iOS")</h1>
 <p>
-  <a href="http://itunes.com/apps/bibledit">translate("Install Bibledit via the App Store.")</a><!-- Todo -->
-  translate("This works on an iPad (or an iPhone) running iOS 8 or higher.")
+  <a href="http://itunes.com/apps/bibledit" ##external##>translate("Install Bibledit via the App Store.")</a>
+  translate("This works on an iPad or an iPhone running iOS 8 or higher.")
 </p>
 <br>
 <p>
@@ -9,5 +9,6 @@
   translate("Switch off backup of Bibledit to iCloud via iOS.")
   translate("Bibledit Cloud already backs up Bibledit iOS.")
   translate("If there were two backup mechanisms, that might  clash.")
-  <a href="https://support.apple.com/kb/PH12791">translate("Read more.")</a><!-- Todo -->
+  <a href="https://support.apple.com/kb/PH12791" ##external##>translate("Read more.")</a>
 </p>
+<script type="text/javascript" src="../assets/external.js"></script>
