--- a/help/installwindows.html
+++ b/help/installwindows.html
@@ -13,7 +13,7 @@
 
 <li>
 <p>
-  <a href="http://bibledit.org/windows">translate("Download") Bibledit</a>.<!-- Todo -->
+  <a href="http://bibledit.org/windows" ##external##>translate("Download") Bibledit</a>.
 </p>
 </li>
 
@@ -32,3 +32,5 @@
 <p>translate("Connect to Bibledit Cloud via menu Settings / Cloud.")</p>
 <p>translate("Give it enough time to download all the data from Bibledit Cloud.")</p>
 <p>translate("Bibledit is now ready for online and offline use.")</p>
+
+<script type="text/javascript" src="../assets/external.js"></script>
