--- a/help/changelog.html
+++ b/help/changelog.html
@@ -20,6 +20,7 @@
 <p>Improved search and replace in texts with notes.</p>
 <p>File upload and download in the Windows app.</p>
 <p>File upload and download in the macOS app.</p>
+<p>Client opens external website in the system browser.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
