--- a/help/changelog.html
+++ b/help/changelog.html
@@ -22,6 +22,7 @@
 <p>File upload and download in the macOS app.</p>
 <p>Client opens external website in the system browser.</p>
 <p>Client keeps Bible books it created before connecting to the Cloud.</p>
+<p>Client cannot install an embedded resource.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
