Send/receive timeout warning update
The Bible editors no longer give a warning when the user has not sent
to and received from the Cloud for a while. And the warning is less
distressing.
This fixes https://github.com/bibledit/bibledit/issues/516

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -23,6 +23,7 @@
 <p>Client opens external website in the system browser.</p>
 <p>Client keeps Bible books it created before connecting to the Cloud.</p>
 <p>Client cannot install an embedded resource.</p>
+<p>The Bible editors no longer give a warning when the user has not sent to and received from the Cloud for a while.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
