The resource viewer scrolls to the same position it had at the last page display
This fixes https://github.com/bibledit/bibledit/issues/518.

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -24,6 +24,7 @@
 <p>Client keeps Bible books it created before connecting to the Cloud.</p>
 <p>Client cannot install an embedded resource.</p>
 <p>The Bible editors no longer give a warning when the user has not sent to and received from the Cloud for a while.</p>
+<p>The resource viewer scrolls to the same position it had at the last page display.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
