Download tarball with all installed resources
https://github.com/bibledit/bibledit/issues/519

--- a/system/index.html
+++ b/system/index.html
@@ -39,5 +39,19 @@ translate ("To switch the feed off, set the number of changes to zero.")
 translate("Include the author in the RSS feed.")
 </p>
 <!-- #ENDZONE cloud -->
+
+<!-- #BEGINZONE client -->
+<h3>translate("Transfer resources and Bibles")</h3>
+<p>
+translate("This helps with transferring resources and Bibles from one Bibledit client to another one.")
+translate("This helps translators with slow Internet connections to quickly setup new Bibledit clients.")
+translate("You can produce a file with all relevant data.")
+translate("Download that file.")
+translate("Upload that file to the new Bibledit client.")
+</p>
+<p><a href="?produceresources=">translate("Get the installed Resources.")</a></p>
+<p><a href="?producebibles=">translate("Get the local Bibles.")</a></p>
+<!-- #ENDZONE client -->
+
 <script type="text/javascript" src="../assets/checkbox.js"></script>
 <script type="text/javascript" src="../assets/external.js"></script>
