Import tarred Bibles into a client
https://github.com/bibledit/bibledit/issues/519

--- a/system/index.html
+++ b/system/index.html
@@ -1,6 +1,7 @@
 <h2>translate("System")</h2>
 <p class="error">##error##</p>
 <p class="success">##success##</p>
+<p>##journal##</p>
 
 <h3>translate("Language")</h3>
 <p>
@@ -46,11 +47,14 @@ translate("Include the author in the RSS feed.")
 translate("This helps with transferring resources and Bibles from one Bibledit client to another one.")
 translate("This helps translators with slow Internet connections to quickly setup new Bibledit clients.")
 translate("You can produce a file with all relevant data.")
-translate("Download that file.")
-translate("Upload that file to the new Bibledit client.")
+translate("Get that file.")
+translate("Copy it to the new Bibledit client.")
+translate("Import it there.")
 </p>
 <p><a href="?producebibles=">translate("Get the local Bibles.")</a></p>
+<p><a href="?importbibles=">translate("Import local Bibles.")</a></p>
 <p><a href="?produceresources=">translate("Get the installed Resources.")</a></p>
+<p><a href="?importresources=">translate("Import installed Resources.")</a></p>
 <!-- #ENDZONE client -->
 
 <script type="text/javascript" src="../assets/checkbox.js"></script>
