--- a/help/changelog.html
+++ b/help/changelog.html
@@ -25,6 +25,7 @@
 <p>Client cannot install an embedded resource.</p>
 <p>The Bible editors no longer give a warning when the user has not sent to and received from the Cloud for a while.</p>
 <p>The resource viewer scrolls to the same position it had at the last page display.</p>
+<p>Offline transfer of Bibles and resources from one client to another.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
