Add a total for a user's own changes, just like the totals for the other team members.
https://github.com/bibledit/bibledit/issues/520

--- a/changes/changes.html
+++ b/changes/changes.html
@@ -72,10 +72,10 @@ translate("The two categories of change notifications enable you to find out whe
 <p>* <a href="?matching=##user##">##icon## translate ("and") 📖 translate("(if their changes and verses match)")</a></p>
 <!-- #ENDITERATION matching -->
 <!-- #BEGINZONE personal -->
-<p>* <a href="?personal">😊 translate("(all of them)")</a></p>
+<p>* <a href="?personal">😊 translate("(all of them)"): ##personalcount##</a></p>
 <!-- #ENDZONE personal -->
 <!-- #BEGINZONE bible -->
-<p>* <a href="?bible">📖 translate("(all of them)")</a></p>
+<p>* <a href="?bible">📖 translate("(all of them)"): ##teamcount##</a></p>
 <!-- #ENDZONE bible -->
 ##dismissblock##
 <br>
