--- a/help/changelog.html
+++ b/help/changelog.html
@@ -26,6 +26,7 @@
 <p>The Bible editors no longer give a warning when the user has not sent to and received from the Cloud for a while.</p>
 <p>The resource viewer scrolls to the same position it had at the last page display.</p>
 <p>Offline transfer of Bibles and resources from one client to another.</p>
+<p>Shows the number of your changes, plus the number of changes of the whole team.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
