Updated info about the changes
It caters for, not “two categories”, but now “different categories” of
change notifications. https://github.com/bibledit/bibledit/issues/519.

--- a/changes/changes.html
+++ b/changes/changes.html
@@ -64,7 +64,7 @@ translate("Changes in the text of the Bibles will be added to the list the next 
 <p>
 translate("Bible translation is a collaborative effort.")
 translate("Changes you enter may be updated by others or merged with their changes.")
-translate("The two categories of change notifications enable you to find out whether your change is now in the Bible text.")
+translate("The different categories of change notifications enable you to find out whether a change is now in the Bible text.")
 </p>
 <br>
 <p>translate("Dismiss the notifications of the changes of the following categories:")</p>
