--- a/help/changelog.html
+++ b/help/changelog.html
@@ -27,6 +27,7 @@
 <p>The resource viewer scrolls to the same position it had at the last page display.</p>
 <p>Offline transfer of Bibles and resources from one client to another.</p>
 <p>Shows the number of your changes, plus the number of changes of the whole team.</p>
+<p>Can put the controls for dismissing change notifications at the top of the page.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
