Fixed: User can remove all passages from a consultation note
https://github.com/bibledit/bibledit/issues/521
https://groups.google.com/forum/#!topic/bibledit-general/-TDkX_H4FmI

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -28,6 +28,7 @@
 <p>Offline transfer of Bibles and resources from one client to another.</p>
 <p>Shows the number of your changes, plus the number of changes of the whole team.</p>
 <p>Can put the controls for dismissing change notifications at the top of the page.</p>
+<p>Fixed: User can remove all passages from a consultation note.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
