--- a/help/changelog.html
+++ b/help/changelog.html
@@ -29,6 +29,7 @@
 <p>Shows the number of your changes, plus the number of changes of the whole team.</p>
 <p>Can put the controls for dismissing change notifications at the top of the page.</p>
 <p>Fixed: User can remove all passages from a consultation note.</p>
+<p>Can grant privilege to users to be able to delete consultation notes.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
