--- a/help/changelog.html
+++ b/help/changelog.html
@@ -30,7 +30,7 @@
 <p>Can put the controls for dismissing change notifications at the top of the page.</p>
 <p>Fixed: User can remove all passages from a consultation note.</p>
 <p>Can grant privilege to users to be able to delete consultation notes.</p>
-<p>The caret in the visual verse editor no longer jumpps to the start of the verse on verse reload.</p>
+<p>The caret in the visual verse editor no longer jumps to the start of the verse on verse reload.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
