Clarifications about the Bible editor selector
This fixes https://github.com/bibledit/bibledit/issues/528.

--- a/help/shortcuts.html
+++ b/help/shortcuts.html
@@ -7,4 +7,5 @@
 <tr><td>Ctrl-S</td><td>translate("Open the styles from the Bible editor.")</td></tr>
 <tr><td>Ctrl/Cmd-F</td><td>translate("Search for words.")</td></tr>
 <tr><td>Ctrl/Cmd-P</td><td>translate("Print.")</td></tr>
+<tr><td>Ctrl-\</td><td><a href="../editor/select">translate("Go to the Bible editor selector.")</a></td></tr>
 </table>
