--- a/personalize/index.html
+++ b/personalize/index.html
@@ -113,13 +113,13 @@ translate("Keep main menu always visible"):
 
 <br>
 <p>
-translate("Enable fast Bible editor switching"):
+translate("Show a link in the Bible editor to select another Bible editor"):
 <a href="?fasteditorswitch=">##fasteditorswitch##</a>.
 </p>
 
 <br>
 <p>
-translate("Available Bible editors in fast Bible editor switcher:")
+translate("Available Bible editors in the Bible editor selector:")
 [<a href="../editor/select">...</a>]
 </p>
 <p>translate("Visual editors:") <a href="?fastswitchvisualeditors=">##fastswitchvisualeditors##</a>.</p>
