--- a/help/changelog.html
+++ b/help/changelog.html
@@ -31,6 +31,7 @@
 <p>Fixed: User can remove all passages from a consultation note.</p>
 <p>Can grant privilege to users to be able to delete consultation notes.</p>
 <p>The caret in the visual verse editor no longer jumps to the start of the verse on verse reload.</p>
+<p>Clients can create OpenDocument files.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
