Working on exporting the consultation notes
https://github.com/bibledit/bibledit/issues/532

--- a/system/index.html
+++ b/system/index.html
@@ -44,7 +44,7 @@ translate("Include the author in the RSS feed.")
 <!-- #BEGINZONE client -->
 <h3>translate("Transfer resources and Bibles")</h3>
 <p>
-translate("This helps with transferring resources and Bibles from one Bibledit client to another one.")
+translate("This helps with transferring Bibles and consultatation notes and resources from one Bibledit client to another one.")
 translate("This helps translators with slow Internet connections to quickly setup new Bibledit clients.")
 translate("You can produce a file with all relevant data.")
 translate("Get that file.")
@@ -53,6 +53,8 @@ translate("Import it there.")
 </p>
 <p><a href="?producebibles=">translate("Get the local Bibles.")</a></p>
 <p><a href="?importbibles=">translate("Import local Bibles.")</a></p>
+<p><a href="?producenotes=">translate("Get the local Consultation Notes.")</a></p>
+<p><a href="?importnotes=">translate("Import installed Consultation Notes.")</a></p>
 <p><a href="?produceresources=">translate("Get the installed Resources.")</a></p>
 <p><a href="?importresources=">translate("Import installed Resources.")</a></p>
 <!-- #ENDZONE client -->
