It now imports transferred notes
This fixes https://github.com/bibledit/bibledit/issues/532

--- a/system/index.html
+++ b/system/index.html
@@ -52,11 +52,11 @@ translate("Copy it to the new Bibledit client.")
 translate("Import it there.")
 </p>
 <p><a href="?producebibles=">translate("Get the local Bibles.")</a></p>
-<p><a href="?importbibles=">translate("Import local Bibles.")</a></p>
+<p><a href="?importbibles=">translate("Import and install Bibles.")</a></p>
 <p><a href="?producenotes=">translate("Get the local Consultation Notes.")</a></p>
-<p><a href="?importnotes=">translate("Import installed Consultation Notes.")</a></p>
+<p><a href="?importnotes=">translate("Import and install Consultation Notes.")</a></p>
 <p><a href="?produceresources=">translate("Get the installed Resources.")</a></p>
-<p><a href="?importresources=">translate("Import installed Resources.")</a></p>
+<p><a href="?importresources=">translate("Import and install Resources.")</a></p>
 <!-- #ENDZONE client -->
 
 <script type="text/javascript" src="../assets/checkbox.js"></script>
