--- a/help/changelog.html
+++ b/help/changelog.html
@@ -32,6 +32,7 @@
 <p>Can grant privilege to users to be able to delete consultation notes.</p>
 <p>The caret in the visual verse editor no longer jumps to the start of the verse on verse reload.</p>
 <p>Clients can create OpenDocument files.</p>
+<p>Offline transfer of consultation notes from one client to another.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
