Code and GUI consistency
This fixes https://github.com/bibledit/bibledit/issues/533: string
journal_logic_see_journal_for_progress (): Apply throughout the code.

--- a/checks/settings.html
+++ b/checks/settings.html
@@ -8,6 +8,7 @@ translate("It will be checked every night.")
 </p>
 <p class="error">##error##</p>
 <p class="success">##success##</p>
+<p>##journal##</p>
 <br>
 <p>translate("Enable the desired checks:")</p>
 
