Updated shortcuts for find and for find next
* Cmd-F Find
* Cmd-G Find next - mention this in the shortcuts.
* Both shortcuts also to be visible in the menu.
* Remove opening Safari from menu.
This fixes https://github.com/bibledit/bibledit/issues/536

--- a/help/changelog.html
+++ b/help/changelog.html
@@ -14,7 +14,7 @@
 <p>Fixed: Logout link in client app.</p>
 <p>Fixed: Inaccurate focused verse when typing at the end of a verse in the USFM chapter editor.</p>
 <p>User privilege whether to use advanced mode in the Cloud.</p>
-<p>Ctrl-F searches the interface.</p>
+<p>Ctrl/Cmd-F searches the interface.</p>
 <p>Localized output of the mechanical checks.</p>
 <p>Improved parsing of emailed responses to consultation notes.</p>
 <p>Improved search and replace in texts with notes.</p>
@@ -33,6 +33,7 @@
 <p>The caret in the visual verse editor no longer jumps to the start of the verse on verse reload.</p>
 <p>Clients can create OpenDocument files.</p>
 <p>Offline transfer of consultation notes from one client to another.</p>
+<p>Cmd-G: Search next in macOS app.</p>
 <p></p>
 
 <h2>Version 1.0.xxx</h2>
