--- a/help/shortcuts.html
+++ b/help/shortcuts.html
@@ -5,7 +5,8 @@
 <tr><td>Alt-Down Arrow</td><td><a href="navigation">translate("Navigate to the next verse.")</a></td></tr>
 <tr><td>Alt-Up Arrow</td><td><a href="navigation">translate("Navigate to the previous verse.")</a></td></tr>
 <tr><td>Ctrl-S</td><td>translate("Open the styles from the Bible editor.")</td></tr>
-<tr><td>Ctrl/Cmd-F</td><td>translate("Search for words.")</td></tr>
+<tr><td>Ctrl/Cmd-F</td><td>translate("Find text.")</td></tr>
+<tr><td>Cmd-G</td><td>translate("Find next.")</td></tr>
 <tr><td>Ctrl/Cmd-P</td><td>translate("Print.")</td></tr>
 <tr><td>Ctrl-\</td><td><a href="../editor/select">translate("Go to the Bible editor selector.")</a></td></tr>
 </table>
