Tor Browser Bundle for security
https://github.com/bibledit/bibledit/issues/537

--- a/help/installation.html
+++ b/help/installation.html
@@ -113,15 +113,22 @@ translate("The changes made in this way can be synchronized with Bibledit Cloud 
   <a href="http://bibledit.org/contact.php" ##external##>translate("Use the contact form to explain why you need a Bibledit Cloud instance.")</a>
 </p>
 
-<h2>translate("Administrator info")</h2>
-<p>
-translate("It is possible to secure traffic between a user's browser and Bibledit Cloud, and between Bibledit clients and Bibledit Cloud.")
-</p>
+<h2>translate("OpenLDAP")</h2>
 <p>
 translate("It is possible to enable an external OpenLDAP server for user authentication.")
+translate("The following file in the Bibledit installation provides all information needed:")
+config/config.txt.
+</p>
+
+<h2>translate("Security")</h2>
+<p>
+translate("It is possible to secure traffic between a user's browser and Bibledit Cloud, and between Bibledit clients and Bibledit Cloud.")
+translate("The following file in the Bibledit installation provides all information needed:")
+config/config.txt.
 </p>
 <p>
-translate("The following file in the Bibledit installation provides all information needed:")
-config/config.txt
+translate ("For more security, access Bibledit Cloud through a Tor Browser Bundle.")
 </p>
+
+
 <script type="text/javascript" src="../assets/external.js"></script>
